# swirl-c

./: BUILD  METADATA  OWNERS  README.md  __init__.py  bluze.textproto  copy.bara.sky  pyproject.toml  swirl_c.blueprint  swirl_c_test.py
boundary/: BUILD  bc_types.py  boundary.py  boundary_test.py
common/: BUILD  testing_utils.py  testing_utils_test.py  types.py  types_test.py  utils.py  utils_test.py
core/: BUILD  driver.py  initializer.py  initializer_test.py  parameter.py  simulation.py  simulation_test.py
demo/: swirl_c_prototype.ipynb
demo/buoyant_bubble/: BUILD  buoyant_bubble.py  buoyant_bubble.py.orig  buoyant_bubble_test.py
demo/channel/: BUILD  channel.py  channel_test.py  channel_test.py.orig
demo/kelvin_helmholtz_instability/: BUILD  kelvin_helmholtz_instability.py  kelvin_helmholtz_instability_test.py
demo/sods_shock_tube/: BUILD  sods_shock_tube.py  sods_shock_tube_test.py
equations/: BUILD  compressible_navier_stokes.py  compressible_navier_stokes_test.py
numerics/: BUILD  gradient.py  gradient_test.py  interpolation.py  interpolation_test.py  kernel_op_types.py
numerics/riemann_solver/: BUILD  hll.py  hll_test.py  hllc.py  hllc_test.py  hllc_test.py.orig  riemann_solver.py  riemann_solver_test.py
numerics/time_integration/: BUILD  rhs_type.py  rk2.py  rk2_test.py  rk3.py  rk3_test.py  time_integration.py  time_integration_test.py
physics/: BUILD  constant.py  diffusion.py  diffusion_test.py  fluid.py  fluid_test.py  physics_models.py  physics_models_test.py
physics/additional_models/: BUILD  gravity.py  gravity_test.py
physics/thermodynamics/: BUILD  generic.py  generic_test.py
physics/transport/: BUILD  simple.py  (+1 more)
